Adds audit-logs endpoint
