# application/common/types/api/audit-logs/getAllAuditLogs.ts
@@ -1,0 +1,5 @@
+import { AuditLog } from '@prisma/client'
+
+export interface GetAllAuditLogsResponse {
+  data: AuditLog[]
+}
