# application/common/types/api/audit-logs/index.ts
@@ -1,0 +1,3 @@
+import type { GetAllAuditLogsResponse } from './getAllAuditLogs'
+
+export { GetAllAuditLogsResponse }
